Adds package nodemailer, html-to-text and folder module in api"
