# src/api/modules/mail.js
@@ -1,0 +1,36 @@
+const nodemailer = require("nodemailer");
+const htmlToText = require("html-to-text");
+const devConfig = require("../../config/env/development");
+
+const sendEmail = options => {
+  new Promise((resolve, reject) => {
+    const transpoter = nodemailer.createTransport({
+      host: devConfig.ethereal.host,
+      port: devConfig.ethereal.port,
+      auth: {
+        user: devConfig.ethereal.username,
+        pass: devConfig.ethereal.password
+      }
+    });
+    const text = htmlToText.fromString(options.html, {
+      wordwrap: 130
+    });
+    const mailOptions = {
+      from: '"Haider Malik 👻" <noreplay@fulltsackhour.com>',
+      to: options.email,
+      subject: options.subject,
+      text,
+      html: options.html
+    };
+    transpoter.sendMail(mailOptions, (error, info) => {
+      if (error) {
+        return reject(error);
+      }
+      console.log("Message id ", info.messageId);
+      console.log("Preview URL ", nodemailer.getTestMessageUrl(info));
+      return resolve({ message: "Reset Email has sent to your inbox" });
+    });
+  });
+};
+
+module.exports = sendEmail;
