# src/config/swagger.json
@@ -39,7 +39,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#definitions/User"
+              "$ref": "#definitions/SignupUser"
             }
           }
         ],
@@ -372,6 +372,24 @@
           "type": "string"
         },
         "password": {
+          "type": "string"
+        }
+      }
+    },
+    "SignupUser": {
+      "required": ["email", "password","name"],
+      "properties": {
+        "_id": {
+          "type": "string",
+          "uniqueItems": true
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "name": {
           "type": "string"
         }
       }
